service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  name: "go-boldly-service"
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: "go-boldly"
